[gd_scene load_steps=3 format=3 uid="uid://c8ovv2asbtseb"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_lb6nm"]
[ext_resource type="FontFile" uid="uid://dg3eds7mv1w24" path="res://Assets/Zombie Blood.ttf" id="1_n5k8m"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_lb6nm")

[node name="btn_start" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.96
anchor_right = 0.5
anchor_bottom = 0.96
offset_left = -80.0
offset_top = -283.2
offset_right = 80.0
offset_bottom = -196.2
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_n5k8m")
theme_override_font_sizes/font_size = 60
text = "Start
"

[node name="btn_instructions" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.96
anchor_right = 0.5
anchor_bottom = 0.96
offset_left = -129.5
offset_top = -133.2
offset_right = 129.5
offset_bottom = -46.2
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_n5k8m")
theme_override_font_sizes/font_size = 60
text = "How To Play
"

[node name="status_container" type="MarginContainer" parent="."]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 134.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="status_time" type="Label" parent="status_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n5k8m")
theme_override_font_sizes/font_size = 60
text = "000"

[node name="status_score" type="Label" parent="status_container"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_n5k8m")
theme_override_font_sizes/font_size = 60
text = "000"
horizontal_alignment = 2

[node name="label_container" type="MarginContainer" parent="."]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="lbl_time" type="Label" parent="label_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n5k8m")
theme_override_font_sizes/font_size = 30
text = "Time"

[node name="lbl_score" type="Label" parent="label_container"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("1_n5k8m")
theme_override_font_sizes/font_size = 30
text = "Score"
horizontal_alignment = 2

[node name="lbl_output" type="Label" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -49.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.180392, 0, 0, 0.85098)
theme_override_fonts/font = ExtResource("1_n5k8m")
theme_override_font_sizes/font_size = 100
text = "Brain Dash !!!"
horizontal_alignment = 1

[connection signal="pressed" from="btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="btn_instructions" to="." method="_on_btn_instructions_pressed"]
